# dinoplate

./: CMakeLists.txt  LICENSE  Makefile  README.md  shell.nix
.github/: rename_project.sh  template.yml
.github/workflows/: rename_project.yml
cmake/: packing.cmake
include/core/: hello.hpp
src/: CMakeLists.txt  main.cpp
src/core/: hello.cpp
